fix: Fix problems when finding a getter method for Boolean field.